# pyttd

./: .editorconfig  .gitignore  BENCHMARKS.md  BUILD_PLAN.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  SECURITY.md  pyproject.toml  setup.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
benchmarks/: bench_components.py  bench_flush.py  bench_locals_primitives.py  bench_locals_scaling.py  bench_overhead.py  bench_overhead_scaled.py  bench_recorder_micro.py  bench_recording_inprocess.py  bench_secret_filter.py  conftest.py
docs/: README.md  api-reference.md  architecture.md  cli-reference.md  faq.md  getting-started.md  pytest-integration.md  troubleshooting.md  vscode-guide.md
docs/development/: building.md  c-extension.md  protocol.md  releasing.md  testing.md
examples/: hello.py
ext/: binlog.c  binlog.h  checkpoint.c  checkpoint.h  checkpoint_store.c  checkpoint_store.h  frame_event.h  iohook.c  iohook.h  platform.h  pyttd_native.c  recorder.c  recorder.h  replay.c  replay.h  ringbuf.c  ringbuf.h  sqliteflush.c  sqliteflush.h
pyttd/: __init__.py  __main__.py  cli.py  cli_ci.py  config.py  diff.py  errors.py  export.py  main.py  protocol.py  pytest_plugin.py  query.py  recorder.py  replay.py  runner.py  server.py  session.py
pyttd/models/: __init__.py  base.py  checkpoints.py  constants.py  db.py  frames.py  io_events.py  runs.py  schema.py  storage.py  timeline.py
pyttd/performance/: clock.py  performance.py
pyttd/tracing/: constants.py  enums.py
samplecode/: basic_sample_function.py  edge_case_samples.py  func_test_basic.py  func_test_deep.py  func_test_edge.py  func_test_leaks.py  func_test_phase7.py  func_test_server.py  func_test_stress.py  functional_e2e.py  functional_test.py  stress_test.py  threads_sample.py
tests/: conftest.py  test_adaptive_sampling.py  test_arm_checkpoints.py  test_async.py  test_attach.py  test_checkpoint.py  test_checkpoint_interval_zero.py  test_checkpoint_skip_counter.py  test_cli_ci.py  test_cli_env.py  test_cli_exception_chain.py  test_cli_exception_summary.py  test_cli_hide_coroutine_internals.py  test_cli_interactive_completer.py  test_cli_module_locals_filter.py  test_cli_output.py  test_cli_query_polish.py  test_cli_repl.py  test_cli_repl_expand.py  test_cli_summary_footer.py  test_conditional_bp.py  test_coroutine_merging.py  test_dap_features.py  test_db_lifecycle.py  test_diff.py  test_exception_unwind_line.py  test_exclude_locals.py  test_expandable_vars.py  test_export.py  test_expression_watch.py  test_iohook.py  test_issues_plan_4.py  test_lazy_indexes.py  test_locals_primitives_fallback.py  test_memory_profiling.py  test_models.py  test_multithread.py  test_native_stub.py  test_p1.py  test_pause.py  (+17 more)
vscode-pyttd/: .mocharc.yml  .vscodeignore  README.md  esbuild.mjs  package-lock.json  package.json
vscode-pyttd/media/: timelineScrubber.css  timelineScrubber.js  variableHistory.css  variableHistory.js
vscode-pyttd/src/: extension.ts
vscode-pyttd/src/debugAdapter/: backendConnection.ts  pyttdDebugSession.ts  types.ts
vscode-pyttd/src/providers/: callHistoryProvider.ts  codeLensProvider.ts  inlineValuesProvider.ts  statusBarProvider.ts  timelineScrubberProvider.ts  variableHistoryProvider.ts
vscode-pyttd/src/test/: backendConnection.test.ts  mock-vscode.ts  providers.test.ts  pyttdDebugSession.test.ts  statusBar.test.ts  variableHistoryProvider.test.ts
